# maze_bot

./: Dockerfile  Makefile  README.md  input1.txt  old_bot.py  setup.cfg
src/maze_bot/: main.py  maze_bot.py
