[metadata]
name=maze_bot
version=1.0

[options]
packages = find:
py_modules = maze_bot
include_package_data = True
install_requires =
    gym
    pygame
    opencv-python
    pillow
    numpy
    matplotlib
    IPython

[options.packages.find]
where = src
exclude = 

[options.entry_points]
console_scripts =
    maze_bot = maze_bot.main:cli